[project]
name = "ai-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "gabriel-garciae",email = "gabrielgevangelista@gmail.com"}
]
packages = [{ include = "ai_agent", from = "src" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "transformers (>=4.54.1,<5.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "accelerate (>=1.9.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
